# boat_display

./: CMakeLists.txt  README.md
config/: config.yml
include/boat_display/: ADS1115.h  CompassWidget.h  ConfigDialog.h
resources/: compass.xcf
scripts/: set_power_settings.sh
src/: boat_display.cpp
src/boat_display/: ADS1115.cpp  CompassWidget.cpp  ConfigDialog.cpp
